--- a/stb/core/templates/project_new.html
+++ b/stb/core/templates/project_new.html
@@ -4,6 +4,186 @@
 
 {% block content %}
 
+<form method="post">
+  {% csrf_token %}
+<div class="app-main">
+    <div class="app-sidebar sidebar-shadow">
+        <div class="app-header__logo">
+            <div class="logo-src"></div>
+            <div class="header__pane ml-auto">
+                <div>
+                    <button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
+                        <span class="hamburger-box">
+                            <span class="hamburger-inner"></span>
+                        </span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        <div class="app-header__mobile-menu">
+            <div>
+                <button type="button" class="hamburger hamburger--elastic mobile-toggle-nav">
+                    <span class="hamburger-box">
+                        <span class="hamburger-inner"></span>
+                    </span>
+                </button>
+            </div>
+        </div>
+        <div class="app-header__menu">
+            <span>
+                <button type="button" class="btn-icon btn-icon-only btn btn-primary btn-sm mobile-toggle-header-nav">
+                    <span class="btn-icon-wrapper">
+                        <i class="fa fa-ellipsis-v fa-w-6"></i>
+                    </span>
+                </button>
+            </span>
+        </div>
+        <div class="scrollbar-sidebar">
+            <div class="app-sidebar__inner">
+                <ul class="vertical-nav-menu">
+                    <li class="app-sidebar__heading">Project Needs</li>
+                    <li>
+                        <a class="mm-actived">
+                            <i class="metismenu-icon pe-7s-rocket"></i>
+                            All
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="app-main__outer">
+        <div class="app-main__inner">
+            <div class="app-page-title">
+                <div class="page-title-wrapper">
+                    <div class="page-title-heading">
+                        <div class="page-title-icon">
+                            <i class="pe-7s-car icon-gradient bg-mean-fruit">
+                            </i>
+                        </div>
+                        <div>Edit Project
+                            <div class="page-title-subheading">Projects available to apply to.
+                            </div>
+                        </div>
+                    </div>
+                    <div class="page-title-actions">
+                        <button type="submit" value="Submit" class="mb-2 mr-2 btn btn-success">Save Project</button>
+
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="main-card mb-3 card">
+                        <div class="card-body">
+                             <h1 class="card-title">{{ project.title }}</h1>
+                              {% for field in form %}
+                              {% if field.label == "Title" or field.label == "Description" %}
+
+                                {{ field.errors }}
+                                {{ field.label_tag }} {{ field }}
+                                {% if field.help_text %}
+                                <p>{{ field.help_text|safe }}</p>
+                                {% endif %}
+
+                              {% endif %}
+                              {% endfor %}
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    {% for field in form %}
+
+                                {% if field.label == "Timeline" or field.label == "Applicant requirements" %}
+                                  <div class="main-card mb-3 card">
+                            <div class="card-body">
+                                    {{ field.errors }}
+                                    <h5 class="card-title">{{ field.label_tag }}</h5>
+                                    <p>{{ field }}</p>
+                                    {% if field.help_text %}
+                                    <p>{{ field.help_text|safe }}</p>
+                                    {% endif %}
+                               </div>
+                        </div>
+                                {% endif %}
+
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="app-page-title">
+                <div class="page-title-wrapper">
+                    <div class="page-title-heading">
+                        <div class="page-title-icon">
+                            <i class="pe-7s-car icon-gradient bg-mean-fruit">
+                            </i>
+                        </div>
+                        <div>Positions
+                            <div class="page-title-subheading">Positions to apply to.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+              {{ inlines.0.management_form}}
+                <div class="col-md-12">
+                  {% for formset in inlines.0 %}
+                    <div class="main-card mb-3 card">
+                        <div class="card-body">
+
+                            <div class="addremove">
+                           {{ formset }}
+                                </div>
+
+                        </div>
+                    </div>
+                  {% endfor %}
+                </div>
+            </div>
+
+        </div>
+        <div class="app-wrapper-footer">
+            <div class="app-footer">
+                <div class="app-footer__inner">
+                    <div class="app-footer-left">
+                        <ul class="nav">
+                            <li class="nav-item">
+                                <a href="javascript:void(0);" class="nav-link">
+                                    Footer Link 1
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="javascript:void(0);" class="nav-link">
+                                    Footer Link 2
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="app-footer-right">
+                        <ul class="nav">
+                            <li class="nav-item">
+                                <a href="javascript:void(0);" class="nav-link">
+                                    Footer Link 3
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="javascript:void(0);" class="nav-link">
+                                    <div class="badge badge-success mr-1 ml-0">
+                                        <small>NEW</small>
+                                    </div>
+                                    Footer Link 4
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</form>
+
   <form method="post">
   {% csrf_token %}
   <div class="circle--actions--bar">
@@ -71,7 +251,7 @@
 <script src="{% static 'extra-js/jquery.formset.js' %}"></script>
 <script>
   $( document ).ready(function() {
-    $('.inline-position').formset({
+    $('.addremove').formset({
         prefix: '{{ inlines.0.prefix }}',
         addText: 'add link',
         deleteText: 'remove'
