--- a/stb/core/templates/base.html
+++ b/stb/core/templates/base.html
@@ -79,10 +79,12 @@
                             </a>
                         </li>
                         <li class="dropdown nav-item">
+                            {% if user.is_authenticated %}
                             <a href="{% url "profile" user.users.id %}" class="nav-link">
                                 <i class="nav-link-icon fa fa-cog"></i>
                                 Profile
                             </a>
+                            {% endif %}
                         </li>
                     </ul>
                 </div>
@@ -96,9 +98,11 @@
                                             <img width="42" class="rounded-circle" src="assets/images/avatars/1.jpg" alt="">
                                             <i class="fa fa-angle-down ml-2 opacity-8"></i>
                                         </a>
+                                        {% if user.is_authenticated %}
                                         <div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
                                             <button onclick="window.location.href = '{% url "profile" user.users.id %}';" type="button" tabindex="0" class="dropdown-item">Profile</button>
                                         </div>
+                                        {% endif %}
                                     </div>
                                 </div>
                                 {% if user.is_authenticated %}
