--- a/stb/core/templates/project_new.html
+++ b/stb/core/templates/project_new.html
@@ -247,6 +247,10 @@
 {% endblock %}
 
 {% block js %}
+<script
+  src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+  integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
+  crossorigin="anonymous"></script>
 <!-- Include formset plugin -->
 <script src="{% static 'extra-js/jquery.formset.js' %}"></script>
 <script>
