--- a/stb/core/templates/index.html
+++ b/stb/core/templates/index.html
@@ -40,7 +40,7 @@
                 <ul class="vertical-nav-menu">
                     <li class="app-sidebar__heading">Project Needs</li>
                     <li>
-                        <a class="mm-actived">
+                        <a class="mm-actived" href="{% url 'index' %}">
                             <i class="metismenu-icon pe-7s-rocket"></i>
                             All
                         </a>
@@ -125,10 +125,6 @@
                                 {% endfor %}
                                 </tbody>
                             </table>
-                        </div>
-                        <div class="d-block text-center card-footer">
-                            <button class="mr-2 btn-icon btn-icon-only btn btn-outline-danger"><i class="pe-7s-trash btn-icon-wrapper"> </i></button>
-                            <button class="btn-wide btn btn-success">Save</button>
                         </div>
                     </div>
                 </div>
