--- a/stb/core/templates/project_new.html
+++ b/stb/core/templates/project_new.html
@@ -61,8 +61,8 @@
                             <i class="pe-7s-car icon-gradient bg-mean-fruit">
                             </i>
                         </div>
-                        <div>Edit Project
-                            <div class="page-title-subheading">Projects available to apply to.
+                        <div>Create
+                            <div class="page-title-subheading">Create new project
                             </div>
                         </div>
                     </div>
@@ -257,7 +257,7 @@
   $( document ).ready(function() {
     $('.addremove').formset({
         prefix: '{{ inlines.0.prefix }}',
-        addText: 'add link',
+        addText: 'add position',
         deleteText: 'remove'
     });
   });
