--- a/stb/core/templates/project.html
+++ b/stb/core/templates/project.html
@@ -41,12 +41,9 @@
             <div class="app-sidebar__inner">
                 <ul class="vertical-nav-menu">
                     <li class="app-sidebar__heading">Project Needs</li>
-                    <li>
-                        <a class="mm-actived">
-                            <i class="metismenu-icon pe-7s-rocket"></i>
-                            All
-                        </a>
-                    </li>
+                    {% for position_id, position_info_list in positions.items %}
+                        <li>{{ position_info_list.0.title }}</li>
+                    {% endfor %}
                 </ul>
             </div>
         </div>
@@ -60,8 +57,8 @@
                             <i class="pe-7s-car icon-gradient bg-mean-fruit">
                             </i>
                         </div>
-                        <div>Projects
-                            <div class="page-title-subheading">Projects available to apply to.
+                        <div>{{ project.title }} project
+                            <div class="page-title-subheading">Project and available positions
                             </div>
                         </div>
                     </div>
