--- a/stb/core/templates/project_edit.html
+++ b/stb/core/templates/project_edit.html
@@ -41,12 +41,9 @@
             <div class="app-sidebar__inner">
                 <ul class="vertical-nav-menu">
                     <li class="app-sidebar__heading">Project Needs</li>
-                    <li>
-                        <a class="mm-actived">
-                            <i class="metismenu-icon pe-7s-rocket"></i>
-                            All
-                        </a>
-                    </li>
+                    {% for position in project.positions.all %}
+                        <li>{{ position.title }}</li>
+                    {% endfor %}
                 </ul>
             </div>
         </div>
@@ -61,16 +58,17 @@
                             </i>
                         </div>
                         <div>Edit Project
-                            <div class="page-title-subheading">Projects available to apply to.
+                            <div class="page-title-subheading">Edit the {{ project.title }} project.
                             </div>
                         </div>
                     </div>
                     <div class="page-title-actions">
-                        <button type="submit" value="Submit" class="mb-2 mr-2 btn btn-success">Save Project</button>
-                        <a href="{% url 'project-edit' project.id %}" class="btn-wide btn btn-danger">
+                        <button type="submit" value="Submit" class="mb-2 mr-2 btn btn-success">Save Project</button><br>
+                        <a href="{% url 'project-delete' project.id %}" class="btn-wide btn btn-danger">
                             <i class="fa fa-business-time fa-w-20"></i>
                             Delete Project
                         </a>
+
                     </div>
                 </div>
             </div>
@@ -257,7 +255,7 @@
   $( document ).ready(function() {
     $('.addremove').formset({
         prefix: '{{ inlines.0.prefix }}',
-        addText: 'add link',
+        addText: 'add position',
         deleteText: 'remove'
     });
   });
