--- a/stb/core/templates/base.html
+++ b/stb/core/templates/base.html
@@ -30,7 +30,8 @@
         <div class="app-container app-theme-white body-tabs-shadow fixed-sidebar fixed-header">
             <div class="app-header header-shadow">
                 <div class="app-header__logo">
-                    <div class="logo-src"></div>
+                    <!-- <div class="logo-src"></div> -->
+                    <img style="width: 20%" src="http://127.0.0.1:8000/static/ui/assets/images/logo-inverse.png">
                     <div class="header__pane ml-auto">
                         <div>
                             <button type="button" class="hamburger close-sidebar-btn hamburger--elastic" data-class="closed-sidebar">
